# dbsnap

./: .gitignore  IMPORTANT.md  README.md  build-windows.bat  dbsnap-setup.iss  dbsnap.spec  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
.kilo/: agent-manager.json
dbsnap/: __init__.py  cli.py  comparator.py  data_exporter.py  extractor.py  hasher.py  reporter.py  restorer.py  snapshot.py
dbsnap/templates/: report.html
tests/: test_comparator.py  test_hasher.py  test_snapshot.py
