[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbsnap"
version = "1.0.0"
description = "SQL Server Schema Snapshot & Diff Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pyodbc>=5.0",
    "zstandard>=0.22",
    "click>=8.0",
    "jinja2>=3.0",
    "tqdm>=4.0",
    "ijson>=3.0",
]

[project.scripts]
dbsnap = "dbsnap.cli:main"

[tool.setuptools.package-data]
dbsnap = ["templates/*.html"]
